# mercury

./: .gitlab-ci.yml  Cargo.toml  profile.coz  shell.nix
src/: azul.rs  azul2.rs  main.rs
