[package]
name = "mercury"
version = "0.1.0"
authors = ["Daniel Olsen <daniel.olsen99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.1"
coz = "0.1"
tinyvec = "1.1.0"

cached = "0.23.0"

modular-bitfield = "0.11.2"

#jemallocator = "0.3.2"
#mimalloc = { version = "0.1.22", default-features = false }

#alloc_counter = "0.0.4"

[profile.release]
debug = 1
lto = "fat"
codegen-units = 1
panic = "abort"
